[package]
name = "server"
version = "0.5.0"
authors = ["The async-rs developers", "quininer <quininer@live.com>"]
edition = "2018"

[dependencies]
structopt = "0.2"
async-std = "0.99"
async-tls = { path = "../.." }
rustls = { version = "0.16", features = ["dangerous_configuration"] }
webpki = "0.21"
